openshift/base/deploymentConfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "129"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"114"},"generation":114,"labels":{"app":"mobile-bff"},"name":"mobile-bff","namespace":"ap-bff-mobile-apps"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app.kubernetes.io/name":"mobile-bff"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":" [...]
  generation: 132
  labels:
    app: mobile-bff
  namespace: ap-bff-mobile-apps
  name: mobile-bff
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: mobile-bff
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mobile-bff
        app.kubernetes.io/name: mobile-bff
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: ap-bff-mobile-apps
        image: sebshift-mobile-bff-docker.repo7.sebank.se/dev/mobile-bff:v1_213b2ffb8216b99278a66ccb26d0df48f36a3e69
        imagePullPolicy: Always
        name: mobile-bff
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
