openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"app":"mobile-bff"},"name":"mobile-bff","namespace":"ap-bff-mobile-apps"},"spec":{"ports":[{"name":"8080-tcp","port":8080,"protocol":"TCP","targetPort":8080},{"name":"9443-tcp","port":9443,"protocol":"TCP","targetPort":9443}],"selector":{"app":"mobile-bff"},"sessionAffinity":"None","type":"ClusterIP"}}
  labels:
    app: mobile-bff
  name: mobile-bff
  namespace: ap-bff-mobile-apps
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9443-tcp
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: mobile-bff
  sessionAffinity: None
  type: ClusterIP
